Add downloader for US city names from Encyclopaedia Britannica

--- a/examples/notebooks/Masterdata.ipynb
+++ b/examples/notebooks/Masterdata.ipynb
@@ -1,20 +1,73 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Masterdata\n",
+    "\n",
+    "**openclean** provides easy access to several different datasets that are available online for download. Below are a few examples."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import openclean.data.masterdata as masterdata\n",
+    "# All datasets can be downloaded and accessed via the\n",
+    "# masterdata module.\n",
     "\n",
-    "masterdata.download('restcountries', 'countries', replace=True)\n",
-    "# masterdata.download('d4')"
+    "import openclean.data.masterdata as masterdata"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "restcountries.eu (restcountries)\n",
+      "\tCountries of the World (countries)\n",
+      "Encyclopaedia Britannica (britannica)\n",
+      "\tUnited States Cities (us_cities)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for repo in masterdata.repositories():\n",
+    "    print('{} ({})'.format(repo.name(), repo.identifier()))\n",
+    "    for ds in repo.datasets():\n",
+    "        print('\\t{} ({})'.format(ds.name(), ds.identifier()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## restcountries.eu\n",
+    "\n",
+    "Dataset of countries in the world that is available from the [restcountries.eu project](http://restcountries.eu/)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download the countries dataset. By default, the downloaded data is stored\n",
+    "# in the $HOME/.openclean/masterdata folder.\n",
+    "\n",
+    "masterdata.download('restcountries', 'countries', replace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -107,7 +160,7 @@
        "10  American Samoa         AS        ASM  Pago Pago  Oceania        Polynesia"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +226,7 @@
        "239  Americas  South America  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,76 +236,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from openclean.operator.transform.update import update\n",
+    "### Modified Mastedata Copies\n",
     "\n",
-    "countries = update(countries, 'name', {'Venezuela (Bolivarian Republic of)': 'Venezuela'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>alpha2Code</th>\n",
-       "      <th>alpha3Code</th>\n",
-       "      <th>capital</th>\n",
-       "      <th>region</th>\n",
-       "      <th>subregion</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>239</th>\n",
-       "      <td>Venezuela</td>\n",
-       "      <td>VE</td>\n",
-       "      <td>VEN</td>\n",
-       "      <td>Caracas</td>\n",
-       "      <td>Americas</td>\n",
-       "      <td>South America</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          name alpha2Code alpha3Code  capital    region      subregion\n",
-       "239  Venezuela         VE        VEN  Caracas  Americas  South America"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "countries.loc[countries['name'] == 'Venezuela']"
+    "The user has the option to modify the downloaded data and store the updated dataset version in the local repository."
    ]
   },
   {
@@ -291,8 +280,74 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>Venezuela</td>\n",
+       "      <td>VE</td>\n",
+       "      <td>VEN</td>\n",
+       "      <td>Caracas</td>\n",
+       "      <td>Americas</td>\n",
+       "      <td>South America</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          name alpha2Code alpha3Code  capital    region      subregion\n",
+       "239  Venezuela         VE        VEN  Caracas  Americas  South America"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from openclean.operator.transform.update import update\n",
+    "\n",
+    "# Rename 'Venezuela (Bolivarian Republic of)' to 'Venezuela'\n",
+    "countries = update(countries, 'name', {'Venezuela (Bolivarian Republic of)': 'Venezuela'})\n",
+    "countries.loc[countries['name'] == 'Venezuela']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>alpha2Code</th>\n",
+       "      <th>alpha3Code</th>\n",
+       "      <th>capital</th>\n",
+       "      <th>region</th>\n",
+       "      <th>subregion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Afghanistan</td>\n",
+       "      <td>Aruba</td>\n",
        "      <td>AF</td>\n",
        "      <td>AFG</td>\n",
        "      <td>Kabul</td>\n",
@@ -301,7 +356,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Åland Islands</td>\n",
+       "      <td>Afghanistan</td>\n",
        "      <td>AX</td>\n",
        "      <td>ALA</td>\n",
        "      <td>Mariehamn</td>\n",
@@ -310,7 +365,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Albania</td>\n",
+       "      <td>Angola</td>\n",
        "      <td>AL</td>\n",
        "      <td>ALB</td>\n",
        "      <td>Tirana</td>\n",
@@ -319,7 +374,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>64</th>\n",
-       "      <td>Algeria</td>\n",
+       "      <td>Anguilla</td>\n",
        "      <td>DZ</td>\n",
        "      <td>DZA</td>\n",
        "      <td>Algiers</td>\n",
@@ -328,7 +383,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>American Samoa</td>\n",
+       "      <td>Åland Islands</td>\n",
        "      <td>AS</td>\n",
        "      <td>ASM</td>\n",
        "      <td>Pago Pago</td>\n",
@@ -340,15 +395,15 @@
        "</div>"
       ],
       "text/plain": [
-       "              name alpha2Code alpha3Code    capital   region        subregion\n",
-       "1      Afghanistan         AF        AFG      Kabul     Asia    Southern Asia\n",
-       "4    Åland Islands         AX        ALA  Mariehamn   Europe  Northern Europe\n",
-       "5          Albania         AL        ALB     Tirana   Europe  Southern Europe\n",
-       "64         Algeria         DZ        DZA    Algiers   Africa  Northern Africa\n",
-       "10  American Samoa         AS        ASM  Pago Pago  Oceania        Polynesia"
+       "             name alpha2Code alpha3Code    capital   region        subregion\n",
+       "1           Aruba         AF        AFG      Kabul     Asia    Southern Asia\n",
+       "4     Afghanistan         AX        ALA  Mariehamn   Europe  Northern Europe\n",
+       "5          Angola         AL        ALB     Tirana   Europe  Southern Europe\n",
+       "64       Anguilla         DZ        DZA    Algiers   Africa  Northern Africa\n",
+       "10  Åland Islands         AS        ASM  Pago Pago  Oceania        Polynesia"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +474,7 @@
        "239  Venezuela         VE        VEN  Caracas  Americas  South America"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,15 +486,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Snapshot (version=0 description='' at=2020-05-19 15:54:07.478064-04:00)>\n",
-      "<Snapshot (version=1 description='' at=2020-05-19 15:54:07.740146-04:00)>\n"
+      "<Snapshot (version=0 description='' at=2020-10-30 13:35:15.657955-04:00)>\n",
+      "<Snapshot (version=1 description='' at=2020-10-30 13:35:16.116390-04:00)>\n"
      ]
     }
    ],
@@ -451,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -470,8 +525,8 @@
       "Inserted Rows    : 0\n",
       "Deleted Rows     : 0\n",
       "Moved Rows       : 0\n",
-      "Updated Rows     : 1\n",
-      "Updated Values   : 1\n"
+      "Updated Rows     : 241\n",
+      "Updated Values   : 241\n"
      ]
     }
    ],
@@ -482,14 +537,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Country name updated from 'Venezuela (Bolivarian Republic of)' to 'Venezuela'\n"
+      "Country name updated from 'Aruba' to 'French Southern Territories'\n"
      ]
     }
    ],
@@ -498,6 +553,104 @@
     "old_val, new_val = row.cells[0].values()\n",
     "\n",
     "print(\"Country name updated from '{}' to '{}'\".format(old_val, new_val))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Encyclopaedia Britannica\n",
+    "\n",
+    "Datasets that are extracted from Web pages of the Encyclopaedia Britannica."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download dataset with US city names.\n",
+    "masterdata.download('britannica', 'us_cities', replace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>Auburn</td>\n",
+       "      <td>Alabama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1155</th>\n",
+       "      <td>Montgomery</td>\n",
+       "      <td>Alabama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>Anniston</td>\n",
+       "      <td>Alabama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1635</th>\n",
+       "      <td>Sheffield</td>\n",
+       "      <td>Alabama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>345</th>\n",
+       "      <td>Clanton</td>\n",
+       "      <td>Alabama</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            city    state\n",
+       "96        Auburn  Alabama\n",
+       "1155  Montgomery  Alabama\n",
+       "62      Anniston  Alabama\n",
+       "1635   Sheffield  Alabama\n",
+       "345      Clanton  Alabama"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "us_cities = masterdata.load('britannica', 'us_cities')\n",
+    "us_cities.head()"
    ]
   },
   {
@@ -524,7 +677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
