Move functionality from groupby.get_eval_func to Eval

--- a/examples/notebooks/NYCRestaurantInspections/NYC Restaurant Inspections - Cleaning.ipynb
+++ b/examples/notebooks/NYCRestaurantInspections/NYC Restaurant Inspections - Cleaning.ipynb
@@ -486,80 +486,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# of violations for FD(CAMIS, INSPECTION DATE -> SCORE) is 8\n"
+      "# of violations for FD(CAMIS, INSPECTION DATE -> INSPECTION TYPE, SCORE) is 10\n"
      ]
     }
    ],
    "source": [
-    "# FD1: CAMIS, INSPECTION DATE -> SCORE\n",
+    "# FD1: CAMIS, INSPECTION DATE -> INSPECTION TYPE, SCORE\n",
     "\n",
     "from openclean.operator.map.violations import fd_violations\n",
-    "fd1_violations = fd_violations(df, ['CAMIS', 'INSPECTION DATE'], 'SCORE')\n",
+    "fd1_violations = fd_violations(df, ['CAMIS', 'INSPECTION DATE'], ['INSPECTION TYPE', 'SCORE'])\n",
     "\n",
-    "print('# of violations for FD(CAMIS, INSPECTION DATE -> SCORE) is {}'.format(len(fd1_violations)))"
+    "print('# of violations for FD(CAMIS, INSPECTION DATE -> INSPECTION TYPE, SCORE) is {}'.format(len(fd1_violations)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          CAMIS INSPECTION DATE VIOLATION CODE  SCORE\n",
-      "4569   41702610      2017-07-17                    29\n",
-      "78197  41702610      2017-07-17                     0\n",
+      "          CAMIS INSPECTION DATE                        INSPECTION TYPE  \\\n",
+      "4569   41702610      2017-07-17  Cycle Inspection / Initial Inspection   \n",
+      "78197  41702610      2017-07-17  Cycle Inspection / Initial Inspection   \n",
       "\n",
-      "           CAMIS INSPECTION DATE VIOLATION CODE  SCORE\n",
-      "14420   40911114      2017-11-04            04N     20\n",
-      "31755   40911114      2017-11-04            08C     20\n",
-      "49122   40911114      2017-11-04            04M     15\n",
-      "56000   40911114      2017-11-04            08A     20\n",
-      "69598   40911114      2017-11-04            04N     15\n",
-      "112737  40911114      2017-11-04            08A     15\n",
-      "148895  40911114      2017-11-04            08C     15\n",
-      "167080  40911114      2017-11-04            04M     20\n",
-      "274101  40911114      2017-11-04            06C     20\n",
+      "      VIOLATION CODE  SCORE  \n",
+      "4569                     29  \n",
+      "78197                     0  \n",
       "\n",
-      "           CAMIS INSPECTION DATE VIOLATION CODE  SCORE\n",
-      "29316   41720266      2018-03-14            02B      0\n",
-      "298918  41720266      2018-03-14            02B      9\n",
+      "           CAMIS INSPECTION DATE                        INSPECTION TYPE  \\\n",
+      "14420   40911114      2017-11-04  Cycle Inspection / Initial Inspection   \n",
+      "31755   40911114      2017-11-04  Cycle Inspection / Initial Inspection   \n",
+      "49122   40911114      2017-11-04  Cycle Inspection / Initial Inspection   \n",
+      "56000   40911114      2017-11-04  Cycle Inspection / Initial Inspection   \n",
+      "69598   40911114      2017-11-04  Cycle Inspection / Initial Inspection   \n",
+      "112737  40911114      2017-11-04  Cycle Inspection / Initial Inspection   \n",
+      "148895  40911114      2017-11-04  Cycle Inspection / Initial Inspection   \n",
+      "167080  40911114      2017-11-04  Cycle Inspection / Initial Inspection   \n",
+      "274101  40911114      2017-11-04  Cycle Inspection / Initial Inspection   \n",
       "\n",
-      "           CAMIS INSPECTION DATE VIOLATION CODE  SCORE\n",
-      "66064   50065982      2018-03-23            08A     12\n",
-      "210211  50065982      2018-03-23                     0\n",
-      "353272  50065982      2018-03-23            04L     12\n",
+      "       VIOLATION CODE  SCORE  \n",
+      "14420             04N     20  \n",
+      "31755             08C     20  \n",
+      "49122             04M     15  \n",
+      "56000             08A     20  \n",
+      "69598             04N     15  \n",
+      "112737            08A     15  \n",
+      "148895            08C     15  \n",
+      "167080            04M     20  \n",
+      "274101            06C     20  \n",
       "\n",
-      "           CAMIS INSPECTION DATE VIOLATION CODE  SCORE\n",
-      "73769   50048062      2018-10-30            05H     28\n",
-      "330432  50048062      2018-10-30                     0\n",
+      "           CAMIS INSPECTION DATE                        INSPECTION TYPE  \\\n",
+      "29316   41720266      2018-03-14  Cycle Inspection / Initial Inspection   \n",
+      "298918  41720266      2018-03-14  Cycle Inspection / Initial Inspection   \n",
       "\n",
-      "           CAMIS INSPECTION DATE VIOLATION CODE  SCORE\n",
-      "147186  50032911      2019-06-22            04L     12\n",
-      "218146  50032911      2019-06-22            10B     12\n",
-      "338555  50032911      2019-06-22            02G      7\n",
-      "347659  50032911      2019-06-22            08A     12\n",
+      "       VIOLATION CODE  SCORE  \n",
+      "29316             02B      0  \n",
+      "298918            02B      9  \n",
       "\n",
-      "           CAMIS INSPECTION DATE VIOLATION CODE  SCORE\n",
-      "150184  41485450      2018-04-12            06B     16\n",
-      "187310  41485450      2018-04-12            08A      0\n",
-      "231219  41485450      2018-04-12            04L      0\n",
-      "262845  41485450      2018-04-12            06B      0\n",
-      "306394  41485450      2018-04-12            08A     16\n",
-      "316178  41485450      2018-04-12            04L     16\n",
+      "           CAMIS INSPECTION DATE                   INSPECTION TYPE  \\\n",
+      "34745   41199571      2016-08-30         Trans Fat / Re-inspection   \n",
+      "117447  41199571      2016-08-30  Cycle Inspection / Re-inspection   \n",
+      "252713  41199571      2016-08-30  Cycle Inspection / Re-inspection   \n",
+      "338929  41199571      2016-08-30  Cycle Inspection / Re-inspection   \n",
       "\n",
-      "           CAMIS INSPECTION DATE VIOLATION CODE  SCORE\n",
-      "248195  50004682      2017-04-11                    38\n",
-      "383438  50004682      2017-04-11                     0\n",
+      "       VIOLATION CODE  SCORE  \n",
+      "34745             16B     13  \n",
+      "117447            10F     13  \n",
+      "252713            06C     13  \n",
+      "338929            06F     13  \n",
+      "\n",
+      "          CAMIS INSPECTION DATE                               INSPECTION TYPE  \\\n",
+      "58708  40894333      2017-02-10  Administrative Miscellaneous / Re-inspection   \n",
+      "73534  40894333      2017-02-10              Cycle Inspection / Re-inspection   \n",
+      "\n",
+      "      VIOLATION CODE  SCORE  \n",
+      "58708            20F      5  \n",
+      "73534            06D      5  \n",
+      "\n",
+      "           CAMIS INSPECTION DATE  \\\n",
+      "66064   50065982      2018-03-23   \n",
+      "210211  50065982      2018-03-23   \n",
+      "353272  50065982      2018-03-23   \n",
+      "\n",
+      "                                          INSPECTION TYPE VIOLATION CODE  \\\n",
+      "66064   Pre-permit (Non-operational) / Initial Inspection            08A   \n",
+      "210211  Pre-permit (Non-operational) / Initial Inspection                  \n",
+      "353272  Pre-permit (Non-operational) / Initial Inspection            04L   \n",
+      "\n",
+      "        SCORE  \n",
+      "66064      12  \n",
+      "210211      0  \n",
+      "353272     12  \n",
+      "\n",
+      "           CAMIS INSPECTION DATE                          INSPECTION TYPE  \\\n",
+      "73769   50048062      2018-10-30  Cycle Inspection / Reopening Inspection   \n",
+      "330432  50048062      2018-10-30  Cycle Inspection / Reopening Inspection   \n",
+      "\n",
+      "       VIOLATION CODE  SCORE  \n",
+      "73769             05H     28  \n",
+      "330432                     0  \n",
+      "\n",
+      "           CAMIS INSPECTION DATE  \\\n",
+      "147186  50032911      2019-06-22   \n",
+      "218146  50032911      2019-06-22   \n",
+      "338555  50032911      2019-06-22   \n",
+      "347659  50032911      2019-06-22   \n",
+      "\n",
+      "                                     INSPECTION TYPE VIOLATION CODE  SCORE  \n",
+      "147186  Inter-Agency Task Force / Initial Inspection            04L     12  \n",
+      "218146  Inter-Agency Task Force / Initial Inspection            10B     12  \n",
+      "338555         Cycle Inspection / Initial Inspection            02G      7  \n",
+      "347659  Inter-Agency Task Force / Initial Inspection            08A     12  \n",
+      "\n",
+      "           CAMIS INSPECTION DATE                        INSPECTION TYPE  \\\n",
+      "150184  41485450      2018-04-12  Cycle Inspection / Initial Inspection   \n",
+      "187310  41485450      2018-04-12  Cycle Inspection / Initial Inspection   \n",
+      "231219  41485450      2018-04-12  Cycle Inspection / Initial Inspection   \n",
+      "262845  41485450      2018-04-12  Cycle Inspection / Initial Inspection   \n",
+      "306394  41485450      2018-04-12  Cycle Inspection / Initial Inspection   \n",
+      "316178  41485450      2018-04-12  Cycle Inspection / Initial Inspection   \n",
+      "\n",
+      "       VIOLATION CODE  SCORE  \n",
+      "150184            06B     16  \n",
+      "187310            08A      0  \n",
+      "231219            04L      0  \n",
+      "262845            06B      0  \n",
+      "306394            08A     16  \n",
+      "316178            04L     16  \n",
+      "\n",
+      "           CAMIS INSPECTION DATE                        INSPECTION TYPE  \\\n",
+      "248195  50004682      2017-04-11  Cycle Inspection / Initial Inspection   \n",
+      "383438  50004682      2017-04-11  Cycle Inspection / Initial Inspection   \n",
+      "\n",
+      "       VIOLATION CODE  SCORE  \n",
+      "248195                    38  \n",
+      "383438                     0  \n",
       "\n"
      ]
     }
@@ -568,7 +639,7 @@
     "# Have a look at the different sets of violations.\n",
     "\n",
     "for key, gr in fd1_violations.items():\n",
-    "    print(gr[['CAMIS', 'INSPECTION DATE', 'VIOLATION CODE', 'SCORE']])\n",
+    "    print(gr[['CAMIS', 'INSPECTION DATE', 'INSPECTION TYPE', 'VIOLATION CODE', 'SCORE']])\n",
     "    print()"
    ]
   },
@@ -585,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +665,7 @@
        "1626"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -615,28 +686,28 @@
       "text/plain": [
        "       1579\n",
        "08A       6\n",
-       "10F       5\n",
        "04L       5\n",
-       "02B       4\n",
+       "10F       5\n",
        "06C       4\n",
+       "02B       4\n",
        "06D       3\n",
-       "02G       3\n",
        "22F       3\n",
+       "02G       3\n",
+       "22G       2\n",
        "06B       2\n",
        "10B       2\n",
-       "22G       2\n",
+       "04H       1\n",
+       "04M       1\n",
+       "10D       1\n",
        "05A       1\n",
        "04K       1\n",
-       "04M       1\n",
-       "04H       1\n",
        "04F       1\n",
-       "04N       1\n",
-       "10D       1\n",
        "09B       1\n",
+       "04N       1\n",
        "Name: VIOLATION CODE, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -659,8 +730,8 @@
        "02G    10\n",
        "04L     8\n",
        "06D     8\n",
-       "10F     7\n",
        "02B     7\n",
+       "10F     7\n",
        "06C     7\n",
        "06E     6\n",
        "05D     4\n",
@@ -668,23 +739,23 @@
        "04A     3\n",
        "10B     3\n",
        "04M     3\n",
-       "04N     2\n",
-       "06A     2\n",
-       "10H     2\n",
-       "10I     2\n",
        "06F     2\n",
        "09B     2\n",
+       "10I     2\n",
+       "06A     2\n",
+       "04N     2\n",
+       "10H     2\n",
        "04K     1\n",
-       "08C     1\n",
-       "04C     1\n",
-       "09C     1\n",
        "06B     1\n",
+       "09C     1\n",
        "03A     1\n",
+       "08C     1\n",
        "07A     1\n",
+       "04C     1\n",
        "Name: VIOLATION CODE, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -724,13 +795,93 @@
        "(373341, 13)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# of violations for FD(CAMIS, INSPECTION DATE -> INSPECTION TYPE, SCORE) is 4\n",
+      "           CAMIS INSPECTION DATE                        INSPECTION TYPE  \\\n",
+      "14420   40911114      2017-11-04  Cycle Inspection / Initial Inspection   \n",
+      "31755   40911114      2017-11-04  Cycle Inspection / Initial Inspection   \n",
+      "49122   40911114      2017-11-04  Cycle Inspection / Initial Inspection   \n",
+      "56000   40911114      2017-11-04  Cycle Inspection / Initial Inspection   \n",
+      "69598   40911114      2017-11-04  Cycle Inspection / Initial Inspection   \n",
+      "112737  40911114      2017-11-04  Cycle Inspection / Initial Inspection   \n",
+      "148895  40911114      2017-11-04  Cycle Inspection / Initial Inspection   \n",
+      "167080  40911114      2017-11-04  Cycle Inspection / Initial Inspection   \n",
+      "274101  40911114      2017-11-04  Cycle Inspection / Initial Inspection   \n",
+      "\n",
+      "       VIOLATION CODE  SCORE  \n",
+      "14420             04N     20  \n",
+      "31755             08C     20  \n",
+      "49122             04M     15  \n",
+      "56000             08A     20  \n",
+      "69598             04N     15  \n",
+      "112737            08A     15  \n",
+      "148895            08C     15  \n",
+      "167080            04M     20  \n",
+      "274101            06C     20  \n",
+      "\n",
+      "           CAMIS INSPECTION DATE                   INSPECTION TYPE  \\\n",
+      "34745   41199571      2016-08-30         Trans Fat / Re-inspection   \n",
+      "117447  41199571      2016-08-30  Cycle Inspection / Re-inspection   \n",
+      "252713  41199571      2016-08-30  Cycle Inspection / Re-inspection   \n",
+      "338929  41199571      2016-08-30  Cycle Inspection / Re-inspection   \n",
+      "\n",
+      "       VIOLATION CODE  SCORE  \n",
+      "34745             16B     13  \n",
+      "117447            10F     13  \n",
+      "252713            06C     13  \n",
+      "338929            06F     13  \n",
+      "\n",
+      "          CAMIS INSPECTION DATE                               INSPECTION TYPE  \\\n",
+      "58708  40894333      2017-02-10  Administrative Miscellaneous / Re-inspection   \n",
+      "73534  40894333      2017-02-10              Cycle Inspection / Re-inspection   \n",
+      "\n",
+      "      VIOLATION CODE  SCORE  \n",
+      "58708            20F      5  \n",
+      "73534            06D      5  \n",
+      "\n",
+      "           CAMIS INSPECTION DATE  \\\n",
+      "147186  50032911      2019-06-22   \n",
+      "218146  50032911      2019-06-22   \n",
+      "338555  50032911      2019-06-22   \n",
+      "347659  50032911      2019-06-22   \n",
+      "\n",
+      "                                     INSPECTION TYPE VIOLATION CODE  SCORE  \n",
+      "147186  Inter-Agency Task Force / Initial Inspection            04L     12  \n",
+      "218146  Inter-Agency Task Force / Initial Inspection            10B     12  \n",
+      "338555         Cycle Inspection / Initial Inspection            02G      7  \n",
+      "347659  Inter-Agency Task Force / Initial Inspection            08A     12  \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Revisit FD1: CAMIS, INSPECTION DATE -> INSPECTION TYPE, SCORE\n",
+    "\n",
+    "from openclean.operator.map.violations import fd_violations\n",
+    "fd1_violations = fd_violations(df, ['CAMIS', 'INSPECTION DATE'], ['INSPECTION TYPE', 'SCORE'])\n",
+    "\n",
+    "print('# of violations for FD(CAMIS, INSPECTION DATE -> INSPECTION TYPE, SCORE) is {}'.format(len(fd1_violations)))\n",
+    "\n",
+    "for key, gr in fd1_violations.items():\n",
+    "    print(gr[['CAMIS', 'INSPECTION DATE', 'INSPECTION TYPE', 'VIOLATION CODE', 'SCORE']])\n",
+    "    print()"
    ]
   },
   {
